# LED_Backlight_Controller

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/LEDstrip/: LEDstrip.cpp  LEDstrip.h
src/ScreenCapture/: ScreenCapture.h  ScreenCaptureFactory.h  ScreenCaptureLinux.cpp  ScreenCaptureLinux.h  ScreenCaptureLinuxWayland.cpp  ScreenCaptureLinuxWayland.h  ScreenCaptureLinuxX11.cpp  ScreenCaptureLinuxX11.h  ScreenCaptureWindows.cpp  ScreenCaptureWindows.h
src/SerialArduino/: SerialArduino.h  SerialArduinoFactory.h  SerialArduinoLinux.cpp  SerialArduinoLinux.h  SerialArduinoWindows.cpp  SerialArduinoWindows.h
